[package]
name = "shet"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
csv = "1.4.0"
glob = "0.3.3"
log = "0.4.29"
noodles = { version = "0.101.0", features = ["bgzf", "core", "vcf"] }
pretty_env_logger = "0.5.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
